<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duatic_message_logger</name>
  <version>1.0.0</version>
  <description>A modern c++20 logging abstraction which can be used without ROS2</description>
  <maintainer email="lnachtigall@duatic.com">Lennart Nachtigall</maintainer>
  <license>BSD3-Clause</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>spdlog</depend>

  <!--This is purely optional but enables the ROS2 logging backend-->
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
